--- a/styles/summary.css
+++ b/styles/summary.css
@@ -45,7 +45,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  width: 90vh;
+  width: 65vw;
 }
 
 .goodmorning-style {
